recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:18: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(length/3.0)
            ^